@@ -1028,6 +1028,22 @@ name|hdfs
 operator|.
 name|util
 operator|.
+name|LightWeightHashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|util
+operator|.
 name|LightWeightLinkedSet
 import|;
 end_import
@@ -1143,20 +1159,6 @@ operator|.
 name|base
 operator|.
 name|Preconditions
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|google
-operator|.
-name|common
-operator|.
-name|collect
-operator|.
-name|Sets
 import|;
 end_import
 
@@ -1507,15 +1509,15 @@ comment|/**    * After a failover, over-replicated blocks may not be handled    
 DECL|field|postponedMisreplicatedBlocks
 specifier|private
 specifier|final
-name|Set
+name|LightWeightHashSet
 argument_list|<
 name|Block
 argument_list|>
 name|postponedMisreplicatedBlocks
 init|=
-name|Sets
-operator|.
-name|newHashSet
+operator|new
+name|LightWeightHashSet
+argument_list|<>
 argument_list|()
 decl_stmt|;
 comment|/**    * Maps a StorageID to the set of blocks that are "extra" for this    * DataNode. We'll eventually remove these extras.    */
