@@ -1096,6 +1096,164 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testRemoveAllViaIterator ()
+specifier|public
+name|void
+name|testRemoveAllViaIterator
+parameter_list|()
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Test remove all via iterator"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Integer
+name|i
+range|:
+name|list
+control|)
+block|{
+name|assertTrue
+argument_list|(
+name|set
+operator|.
+name|add
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|Iterator
+argument_list|<
+name|Integer
+argument_list|>
+name|iter
+init|=
+name|set
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|int
+name|e
+init|=
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+comment|// element should be there before removing
+name|assertTrue
+argument_list|(
+name|set
+operator|.
+name|contains
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iter
+operator|.
+name|remove
+argument_list|()
+expr_stmt|;
+comment|// element should not be there now
+name|assertFalse
+argument_list|(
+name|set
+operator|.
+name|contains
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|// the deleted elements should not be there
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|NUM
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|assertFalse
+argument_list|(
+name|set
+operator|.
+name|contains
+argument_list|(
+name|list
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|// iterator should not have next
+name|Iterator
+argument_list|<
+name|Integer
+argument_list|>
+name|iter
+init|=
+name|set
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|set
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Test remove all via iterator - DONE"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testPollAll ()
 specifier|public
 name|void
